--- a/assets/flat.css
+++ b/assets/flat.css
@@ -769,11 +769,16 @@ font-size: 10px;
 font-family: "Inter Medium";
 }
 
-.regular_sidebar{
+.sx_container{
+
+}
+
+
+.sx_sidebar{
   /*margin: 1px;*/
   /*padding: 1px;*/
   width: 20%;
-  background-color: #ff4e00;
+  background-color:#FE5000;
   position: absolute;
   height: 100%;
   overflow: auto;
@@ -781,7 +786,7 @@ font-family: "Inter Medium";
 }
 
 
-.regular_body{
+.sx_main content{
   /*margin: 19rem;*/
   margin-left: 18rem;
   padding-top: 0rem;
@@ -878,4 +883,57 @@ color: #ced2ce;
   color: #ced2ce;
   font-size: 14px;
   height: 3em;
+}
+
+.button-container {
+  display: block;
+  align-items: center; /* align items vertically */
+  justify-content: center; /* center items horizontally */
+  height: 200px; /* optional height to make the container visible */
+}
+
+button {
+  margin: 10px; /* optional margin for the buttons */
+}
+
+
+.parent-container_sx {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%; /* or any desired height */
+  text-decoration: none;
+  /*color: white;*/
+  /*background-color: #2f2e2e;*/
+}
+
+.button_sx {
+  /*margin : 10px;*/
+  align-self: center;
+  text-decoration: none;
+  background-color: #FE5000;
+  color: white;
+  /*font-size: 2em;*/
+  height: 3em;
+  border: 4px solid white;
+  border-radius: 8px;
+  /*padding: 1em;*/
+  width: 80%;
+  /*background-color: white;*/
+}
+
+.link_sx {
+  /*margin : 10px;*/
+  /*align-self: center;*/
+  text-decoration: none;
+  /*background-color: #FFB549;*/
+  color: white;
+  font-size: 2em;
+  height: 5em;
+  font-family: Arial;
+
+
+  /*padding: 1em;*/
+  width: 70%;
+  /*background-color: white;*/
 }
