--- a/assets/flat.css
+++ b/assets/flat.css
@@ -769,35 +769,6 @@ font-size: 10px;
 font-family: "Inter Medium";
 }
 
-.sx_container{
-
-}
-
-
-.sx_sidebar{
-  /*margin: 1px;*/
-  /*padding: 1px;*/
-  width: 20%;
-  background-color:#FE5000;
-  position: absolute;
-  height: 100%;
-  overflow: auto;
-  margin: auto;
-}
-
-
-.sx_main content{
-  /*margin: 19rem;*/
-  margin-left: 18rem;
-  padding-top: 0rem;
-  width: 80%;
-  background-color: #f5f5f5;
-  top:0;
-  height: 100%;
-  position: absolute;
-  /*overflow: auto;*/
-
-}
 
 .item_centering{
   display: flex;
@@ -928,12 +899,54 @@ button {
   text-decoration: none;
   /*background-color: #FFB549;*/
   color: white;
-  font-size: 2em;
+  font-size: 1.5em;
   height: 5em;
   font-family: Arial;
-
-
   /*padding: 1em;*/
   width: 70%;
   /*background-color: white;*/
+}
+
+.sx_container{
+  display: flex;
+  justify-content: space-between;
+
+}
+.sx_sidebar{
+  width: 15%;
+  background-color:#FE5000;
+  height: 100%;
+  /*top:0;*/
+  /*left: 0;*/
+  /*right:0;*/
+  /*margin-right: 0;*/
+  position:absolute;
+
+}
+.sx_body{
+  /*margin: 19rem;*/
+  margin-left: 15%;
+  /*padding-top: 0rem;*/
+  /*width: 80%;*/
+  background-color: #121111;
+  height: 100%;
+  position: absolute;
+  overflow: auto;
+}
+
+
+.sx_table{
+  border: 2px solid #fe5000;
+  margin-top: 1em;
+  margin-right:1em;
+  margin-left:1em;
+  /*margin: auto;*/
+  border-radius: 10px;
+  /*text-align: center;*/
+  /*width: 90%;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+  max-width: 90%;
 }
